# PitCrew

./: .codebotignore  .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  README_OLD.md  README_SPEC.md  plan.md  pyproject.toml  test_cli.sh
.bot/: index.json
.bot/runs/20251018_131522/: transcript.ndjson
.bot/runs/20251018_135155/: transcript.ndjson
pitcrew/: __init__.py  cli.py  config.py  constants.py  conversation.py  graph.py  intent.py  llm.py  state.py  system_prompt.py
pitcrew/.bot/: index.json
pitcrew/.bot/runs/20251018_140435/: transcript.ndjson
pitcrew/.bot/runs/20251018_141625/: transcript.ndjson
pitcrew/.bot/runs/20251018_141806/: transcript.ndjson
pitcrew/handlers/: __init__.py  autonomous.py  query.py
pitcrew/templates/: AGENT.md.j2  CLAUDE.md.j2
pitcrew/tools/: __init__.py  executor.py  file_index.py  planner.py  read_write.py  tester.py
pitcrew/utils/: __init__.py  diffs.py  ignore.py  logging.py
tests/: __init__.py  conftest.py  test_executor.py  test_file_index.py  test_ignore.py  test_read_write.py
